[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/icons/skills/flame-512.png" type="Texture" id=1]
[ext_resource path="res://ui/icons/skills/circle-512.png" type="Texture" id=2]
[ext_resource path="res://ui/icons/empty_slot_frame-512.png" type="Texture" id=3]
[ext_resource path="res://ui/icons/skills/attack-512.png" type="Texture" id=4]
[ext_resource path="res://ui/icons/skills/darkness-512.png" type="Texture" id=5]
[ext_resource path="res://ui/icons/skills/blue_star-512.png" type="Texture" id=6]
[ext_resource path="res://ui/skill_slots/skill_slots.gd" type="Script" id=7]
[ext_resource path="res://ui/icons/skills/defense-512.png" type="Texture" id=8]

[node name="skill_slots" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot1" type="TextureRect" parent="."]
anchor_left = 0.333
anchor_right = 0.667
anchor_bottom = 0.333
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot" type="TextureButton" parent="slot1"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot2" type="TextureRect" parent="."]
anchor_top = 0.333
anchor_right = 0.333
anchor_bottom = 0.667
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot" type="TextureButton" parent="slot2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot0" type="TextureRect" parent="."]
visible = false
anchor_left = 0.34
anchor_top = 0.35
anchor_right = 0.49
anchor_bottom = 0.65
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot" type="TextureButton" parent="slot0"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot5" type="TextureRect" parent="."]
visible = false
anchor_left = 0.51
anchor_top = 0.35
anchor_right = 0.66
anchor_bottom = 0.65
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot" type="TextureButton" parent="slot5"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot3" type="TextureRect" parent="."]
anchor_left = 0.667
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 0.667
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot" type="TextureButton" parent="slot3"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot4" type="TextureRect" parent="."]
anchor_left = 0.333
anchor_top = 0.667
anchor_right = 0.667
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="slot" type="TextureButton" parent="slot4"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5
